--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: "3"
 
 services:
+  mongo:
+    image: mongo:7.0
+    container_name: mongo
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - mongo-data:/data/db
   api:
     build:
       # repo root
@@ -8,3 +18,9 @@ services:
       dockerfile: docker/api.Dockerfile
     ports:
       - "8080:8080"
+    environment:
+      MONGO_URI: "mongodb://root:password@mongo:27017"
+    depends_on:
+      - mongo
+volumes:
+  mongo-data:
