--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,18 @@ services:
       - "8080:8080"
     environment:
       MONGO_URI: "mongodb://root:password@mongo:27017"
+      RABBITMQ_URI: "amqp://guest:password@rabbitmq:5672/"
     depends_on:
       - mongo
+      - rabbitmq
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: password
+
 volumes:
   mongo-data:
